- Removed assertions from get_token_name() and get_token_value() and replaced 
  these with more meaningful code.
- Added the BOOST_WAVE_USE_STRICT_LEXER configuration constant which allows to
  decide, whether the '$' character will be recognized as a part of identifiers
  or not (the default is BOOST_WAVE_USE_STRICT_LEXER == 0, i.e. '$' will be
  recognized as part of identifiers).
  
Boost V1.33.1
- Version 1.2.1
- Fixed bug reported as Sourceforge bug 1274584.
- Switched to Re2C V0.9.9.
- Fixed a bug where the 'parameters' and 'definition' parameters to the 
  defined_macro callback of the preprocessing hooks were always empty (thanks
  to Stefan Seefeld for reporting).
- Fixed missing namespace specifiers in token definition macros (thanks to 
  Jozsef Mihalicza for reporting).
- Enabled --preserved and --long_long modes by default for the cpp_tokens 
  sample.
- Newline tokens reported a wrong line number (offset by one) when using the
  Re2C generated lexer (thanks to Jozsef Mihalicza for pointing this out).
- Changed file positions to carry 'unsigned int' line and column numbers.
- Fixed tokens of a generated #line directive to carry the correct column 
  numbers.
- Tokens now contain the correct filename, line and column numbers even if
  a #line directive was encountered.
- Fixed wrong line numbering in reference comments of the tests t_5_002.cpp and 
  t_5_035.cpp.
- Made sure, that preprocessor expression errors get ignored for 'passive' 
  #elif branches.
- Fixed an issue reported by the gcc debug stl.

Boost V1.33.0
Version 1.2
- Fixed name clash wrt T_DIVIDE on FreeBSD.
- Fixed documentation of the different language_support flags.
- The support for long long suffixes is no longer bound to the variadics mode,
  it has to be enabled by the new long_long mode (default in C99).
- Fixed compilation if BOOST_WAVE_DUMP_PARSE_TREE is defined.
- Fixed lexer error message wrt long_long mode.